fixed footnote mismatch on safari

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ h4 {
   padding: 20px 15px;
   font-size: 11px;
   color: #777;
+  height: 80px;
 }
 
 #map-container {
